--- a/todo
+++ b/todo
@@ -1,3 +1,23 @@
-# Todo
+### Todo
 
-- [ ] website ( Logo )
+# base
+
+- [ ] website ( Logo ) -> Dylan
+- [ ] Framework
+  - [ ] React, 
+    - [ ] jsx, 
+    - [ ] js, 
+    - [ ] (css and tailwind)
+    - [ ] Contact form
+  
+- [ ] email for the group (...@paveer.com)
+- [ ] LinkdeIn linked
+- [ ] Hackathon organistation linked
+- [ ] Github Linked
+- [ ] University of London ( get confirmation that we are apart of it -> UOL students can only join) 
+
+
+# second
+
+- [ ] Display our hackathon wins (with memebrs linked)
+- [ ] Projects ( Biography of each member, projects, backstory )
